# FlightController_v2.0

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake-single-platform.yml
Cube32/: FlightController_v2.0.ioc
doc/RC/: RC.md
include/: Common.hpp  Math.hpp  mavlink_bridge_header.hpp
kek/: I-Bus.cpp  S-Bus.cpp
lib/: Math.rar  PID.hpp
lib/Algo/: RingBuff.hpp
lib/ArduinoAPI/: Print.cpp  Print.h  Printable.h  Stream.cpp  Stream.h
lib/SRT/: SRT.cpp  SRT.hpp
platform/pc/: delay.cpp  sections.ld  setup.cpp
platform/stm32/: Board.hpp  LED.cpp  STM32G431CBTx_FLASH.ld  battery.cpp  delay.cpp  imu.cpp  loop.cpp  motor.cpp  setup.cpp
platform/stm32/BMP280/: BMP280.cpp  BMP280.hpp
platform/stm32/I2C/: I2C.hpp
platform/stm32/ICM-20948/: AKM_AK09916_registers.hpp  ICM-20948.cpp  ICM-20948.hpp  InvenSense_ICM20948_registers.hpp
platform/stm32/UART/: Uart.cpp  Uart.hpp  UartDef.cpp
src/: main.cpp  servo.cpp
src/ahrs/: ahrs.cpp  ahrs.hpp  ahrs_param.cpp  atmosphere.cpp  atmosphere.hpp
src/battery/: battery.cpp  battery.hpp
src/cli/: cli.cpp  cli.hpp
src/control/: Control.cpp  Control.hpp  Control_param.cpp
src/indicators/: LED.cpp  LED.hpp
src/math/: math.cpp  math.hpp
src/mavlink/: mavlink.cpp  mavlink.hpp  mavlink_profiles.hpp
src/modes/: Direct.cpp  Direct.hpp  Disarm.cpp  Disarm.hpp  Fault.cpp  Fault.hpp  GyroscopeOffsetCalibrate.cpp  GyroscopeOffsetCalibrate.hpp  Landing.hpp  MagnetometerCalibration.hpp  MagnetometerCallibration.cpp  Modes.cpp  Modes.hpp  Stabilize.cpp  Stabilize.hpp
src/motor/: motor.cpp  motor.hpp
src/param/: param.cpp  param.hpp
src/platform/pc/: loop.cpp  setup.cpp
src/platform/stm32/: STM32G431CBTx_FLASH.ld  loop.cpp
src/platform/stm32/I2C/: I2C.cpp
src/rc/: CRSF.cpp  CRSF.hpp  I-Bus.cpp  I-Bus.hpp  RC.cpp  RC.hpp  RC_Telem.cpp  RC_param.cpp  S-Bus.cpp  S-Bus.hpp
tools/: analyzeIMU.ipynb  checkTrustVector.py  parse_serial.py  saveData.py
